# jrow

./: .dockerignore  .gitignore  COPYRIGHT  Cargo.toml  Makefile  QUICKSTART.md  README.md
LICENSES/: MIT-0.txt
docs/: ASYNCAPI_REDESIGN.md  README.md  SPECIFICATION-COMPLIANCE.md  SPECIFICATION.md  TEMPLATE_GEN_UPDATE.md  asyncapi-template-implementation.md  batch-implementation.md  batch-subscribe-implementation.md  deploy-script-template.md  implementation-summary.md  middleware.md  nats-pattern-matching.md  observability.md  opentelemetry-implementation.md  persistent-subscriptions.md  publish-batch-implementation.md  pubsub-implementation.md  reconnection.md  use-cases.md
examples/: batch.rs  bidirectional.rs  in_memory_pattern_matching.rs  middleware_example.rs  observability_client.rs  observability_full.rs  observability_server.rs  persistent_batch.rs  persistent_client.rs  persistent_pattern_client.rs  persistent_pattern_matching.rs  persistent_pattern_server.rs  persistent_pubsub.rs  persistent_server.rs  playground_server.rs  publish_batch.rs  pubsub.rs  pubsub_batch.rs  reconnection_client.rs  reconnection_server.rs  server_with_ui.rs  simple_client.rs  simple_server.rs  subscription_filters.rs
jrow-client/: Cargo.toml
jrow-client/src/: batch.rs  client.rs  client_builder.rs  connection_state.rs  lib.rs  metrics.rs  notification.rs  reconnect.rs  request.rs
jrow-client/tests/: client_lifecycle_test.rs  reconnection_test.rs  request_response_test.rs  subscription_test.rs
jrow-client/tests/common/: mod.rs
jrow-core/: Cargo.toml
jrow-core/src/: codec.rs  error.rs  lib.rs  observability.rs  types.rs
jrow-macros/: Cargo.toml
jrow-macros/src/: handler.rs  lib.rs
jrow-server/: Cargo.toml
jrow-server/src/: batch.rs  builder.rs  connection.rs  filter.rs  handler.rs  lib.rs  metrics.rs  middleware.rs  nats_pattern.rs  persistent_storage.rs  persistent_subscription.rs  retention.rs  retention_task.rs  router.rs  subscription.rs
jrow-server/tests/: client_server_integration_test.rs  connection_lifecycle_test.rs  middleware_test.rs  persistent_integration_test.rs  pubsub_integration_test.rs  server_api_test.rs  websocket_lifecycle_test.rs
playground/: README.md  index.html
src/: lib.rs
templates/: .asyncapi-studio  README.md  SCHEMA_COMPARISON.md  VALIDATION_REPORT.md  asyncapi.yaml  asyncapi.yaml.tera  jrow-template.toml
templates/deploy/: .gitkeep  README.md  README.md.tera
templates/deploy/docker/: Dockerfile  Dockerfile.dev  Dockerfile.tera  docker-compose.yml  docker-compose.yml.tera
templates/deploy/k8s/: configmap.yaml  configmap.yaml.tera  deployment.yaml  deployment.yaml.tera
templates/deploy/observability/: README.md  docker-compose.observability.yml  prometheus.yml
templates/deploy/scripts/: deploy.sh  deploy.sh.tera
templates/rust-project/: .env.example  .gitignore  Cargo.toml  Makefile  README.md  TEMPLATE.md  rust-toolchain.toml
templates/rust-project/src/: handlers.rs  lib.rs  types.rs
tools/template-gen/: CHANGELOG.md  Cargo.toml
tools/template-gen/src/: main.rs
web-ui/: README.md  app.js  index.html  jrow-client.js  styles.css
