[package]
name = "jrow-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC 2.0 server implementation over WebSocket"

[dependencies]
jrow-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
async-trait = "0.1"
glob = "0.3"
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing.workspace = true
sled = "0.34"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["full"] }
jrow-client = { path = "../jrow-client" }

